@@ -1,7 +1,12 @@
 check_SCRIPTS = \
     grid-ca-create-test \
     grid-ca-sign-test
-TESTS = $(check_SCRIPTS)
+
+if RUN_TESTS
+test_scripts = $(check_SCRIPTS)
+endif
+
+TESTS = $(test_scripts)
 
 EXTRA_DIST = $(check_SCRIPTS)
-TESTS_ENVIRONMENT=export PATH=$(abs_top_builddir):$${PATH};
+TESTS_ENVIRONMENT=export PATH=$(abs_top_builddir):$(GLOBUS_COMMON_PATH):$${PATH};
