@@ -1,3 +1,9 @@
+globus-common (15.13-1+gt6.@distro@) @distro@; urgency=low
+
+  * Packaging fixes
+
+ -- Globus Toolkit <support@globus.org>  Tue, 18 Feb 2014 20:03:16 -0500
+
 globus-common (15.12-1+gt6.@distro@) @distro@; urgency=low
 
   * Don't depend on finding initializer/args parser
